# nexus-os

./: .gitignore  LICENSE  README.md  pyproject.toml  run_aura_audit.py
examples/aura-demo/: .gitignore  AURA_Demo_Guide.docx  README.md  docker-compose.yml
examples/aura-demo/backend/: .dockerignore  .env.example  Dockerfile  main.py  pytest.ini  render.yaml  requirements.txt  test_remote_api.py
examples/aura-demo/docs/: ASSURE-2.0-BREAKTHROUGH-BRAINSTORM-2026-07-03.md  ASSURE-2.0-IMPLEMENTATION-PLAN.md  ASSURE-2.0-ROADMAP.md  BACKUP-RESTORE.md  DEPLOYMENT.md  PILOT-ONBOARDING.md  SOC2-CHECKLIST.md  WALKTHROUGH.md
examples/aura-demo/e2e-tests/: deep-dive-screenshots.js  hermes-approve-debug.js  hermes-approve-flow.js  hermes-bulk-approve.js  package-lock.json  package.json  workbench-red-to-green.js
examples/aura-demo/frontend/: .dockerignore  .env.local.example  .eslintrc.json  Dockerfile  deep-dive-screenshots.js  next.config.js  package-lock.json  package.json  smoke-screenshots.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
examples/aura-demo/nginx/: nginx.conf
examples/aura-demo/scripts/: e2e_audit.py  e2e_deep.py  e2e_screenshots.py  (+5 more)
nexus_os/: __init__.py  cli.py  config.py
nexus_os/agents/: __init__.py  prompts.py  runner.py
nexus_os/evidence/: __init__.py  verdict.py
nexus_os/memory/: __init__.py  handoffs.py  resume.py  store.py
nexus_os/pipeline/: __init__.py  models.py  orchestrator.py  state_machine.py
nexus_os/reporting/: __init__.py  status_report.py
nexus_os/roster/: __init__.py  loader.py  models.py
nexus_os/tools/: __init__.py  filesystem.py  git.py
tests/: conftest.py  test_cli.py  test_memory.py  test_pipeline.py  test_roster.py
(+226 files in other folders)
