[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-os"
version = "0.1.0"
description = "A reboot-proof multi-agent operating system built on top of The Agency roster."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Satyam Das", email = "satyamdas03@gmail.com" },
]
keywords = ["ai", "agents", "orchestration", "nexus", "agency", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "anthropic>=0.40.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0.1",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
nexus-os = "nexus_os.cli:app"
nexus = "nexus_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["nexus_os"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
